# opengl-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
res/shaders/: basic.shader
